# alberta

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  ROADMAP.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
alberta_framework/: __init__.py  cli.py  security.py
alberta_framework/benchmarks/: alberta_plan_solution_gate.py  rlsecd_external_acceptance_spec.py  sarsa_throughput.py  security_gym_oracle_experience_export.py  step12_ia_augmentation.py  step12_solution_gate.py  step2_opmnist_full_run_plan.py  step2_transformer_memory_throughput.py  step2_transformer_stronger_ffn_validation.py  step2_upgd_efficiency.py  step3_off_policy_horde.py  step3_solution_gate.py  step4_solution_gate.py  step5_average_reward_horde_actor_critic.py  step5_off_policy_average_reward.py  step5_solution_gate.py  step6_continuing_control.py  step7_cartpole_dyna.py  step7_production_nonlinear_dyna.py  steps3_5_accepted_completion_gate.py
alberta_framework/core/: compositional_features.py  horde_actor_critic.py  learners.py  prototype_agent.py
alberta_framework/examples/: gymnasium_reward_prediction.py  td_cartpole_lms.py
alberta_framework/scripts/: step2_opmnist_remote_finish.sh  step2_opmnist_sync_and_gate.sh  step4_ac_10seed.py  step4_ac_sweep.py  step4_horde_ac_sweep.py
benchmarks/: alberta_plan_remaining_todo_gate.py  alberta_plan_solution_gate.py  daemon_throughput.py  horde_throughput.py  prototype_end_to_end.py  prototype_sim_to_real_transfer.py  rlsecd_external_acceptance_validate.py  rlsecd_external_audit.py  security_gym_counterfactual_rollout.py  security_gym_oracle_experience_export.py  step10_feature_autodiscovery.py  step10_solution_gate.py  step10_stomp_options.py  step11_oak_curation.py  step11_solution_gate.py  step1_solution_gate.py  step1_throughput.py  step2_associative_opmnist_confirmation.py  step2_opmnist_combine_candidate_with_baselines.py  step2_opmnist_merge_seed_results.py  step2_opmnist_solution_gate.py  step2_opmnist_solution_pipeline.py  step2_solution_gate.py  step2_sparse_kv_associative_probe.py  step2_transformer_baseline_fairness_ledger.py  step2_transformer_compute_fairness_pareto.py  step2_transformer_confirmatory_paperworthy_runner.py  step2_transformer_paperworthy_benchmark_suite.py  step2_transformer_validation_variance_diagnosis.py  step2_upgd_evidence_gate.py  step3_gradient_td_correction.py  step3_independent_trace_horde.py  step3_nonlinear_shared_gtd_horde.py  step3_nonlinear_shared_gtd_stress.py  step3_recursive_gvf_feature_discovery.py  step3_solution_gate.py  step4_horde_actor_critic_control.py  step4_solution_gate.py  step5_average_reward_horde.py  step5_average_reward_prediction.py  (+17 more)
benchmarks/bsuite/: __init__.py  analysis.py  configs.py  run_single.py  run_sweep.py
docs/: index.md
docs/getting-started/: quickstart.md
docs/guide/: actor-critic-control.md  concepts.md  end-to-end-pipeline.md  step1-step2-production.md
docs/research/: ALBERTA_PLAN_12STEPS_AUDIT.md  ALBERTA_PLAN_12STEPS_QUICK_REF.txt  CODEBASE_AUDIT_EXECUTIVE_SUMMARY.md  PAPER_AUDIT_INDEX.md  (+478 more)
examples/: publication_experiment.py
outputs/: step10_solution_gate.json  step11_solution_gate.json  step12_solution_gate.json  step2_solution_gate.json  step3_solution_gate.json  step4_solution_gate.json  step5_solution_gate.json  step6_solution_gate.json  step7_solution_gate.json  step8_solution_gate.json  step9_solution_gate.json
scripts/: squash_to_single_commit.sh  step2_opmnist_cloud_seed.sh  step4_ac_sweep.py
tests/: conftest.py  test_alberta_plan_remaining_todo_gate.py  test_bsuite_agents.py  test_bsuite_helpers.py  test_config_serialization.py  test_continual_backprop.py  test_continuous_diffeml_performance.py  test_d18_groupwise_decay.py  test_d18_opmnist_bridge.py  test_d20_multiprototype_opmnist.py  test_diffeml_ablation_suite.py  test_diffeml_hard_synthesis_suite.py  test_diffeml_logic_benchmark.py  test_diffeml_pure_eml_scale_suite.py  test_fast_slow.py  test_horde_actor_critic.py  test_optimizers.py  test_pipeline.py  test_production_steps.py  test_prototype_agent.py  test_rlsecd_external_acceptance_spec.py  test_security_gym_oracle_experience_export.py  test_step10_production.py  test_step11_production.py  test_step12_production.py  test_step1_replication.py  test_step2_associative_evidence_gate.py  test_step2_associative_opmnist_confirmation.py  test_step2_canonical.py  test_step2_cifar_stream.py  test_step2_completion_criteria.py  test_step2_conclusive_learner.py  test_step2_context_disentanglement.py  test_step2_context_inference.py  test_step2_expert_mixture.py  test_step2_external_suite.py  test_step2_new_direction_pilots.py  test_step2_opmnist_protocol.py  test_step2_published_stressors.py  test_step2_resource_manager_stateful_external.py  (+11 more)
(+556 files in other folders)
